# Open-Backend

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
auth-service/: pom.xml
auth-service/src/main/java/com/opencore/auth/: AuthServiceApplication.java
auth-service/src/main/java/com/opencore/auth/api/: AuthController.java  HealthController.java
auth-service/src/main/java/com/opencore/auth/core/: AuthService.java  BruteForceProtector.java  InMemoryOtpStore.java  InMemorySessionStore.java  JwtService.java  OpenCoreJwtProperties.java
auth-service/src/main/resources/: application.yml
billing-service/: pom.xml
billing-service/src/main/java/com/opencore/billing/: BillingServiceApplication.java
billing-service/src/main/java/com/opencore/billing/api/: HealthController.java
billing-service/src/main/resources/: application.yml
docs/: architecture.md  decisions.md  failure-modes.md  release-notes-v0.1.0.md  roadmap.md  smoke-test.md  test-report-2025-12-29.md
gateway/: Cargo.toml
gateway/src/: main.rs
infra/docker/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
infra/k8s/: README.md
notification-service/: pom.xml
notification-service/src/main/java/com/opencore/notification/: NotificationServiceApplication.java
notification-service/src/main/resources/: application.yml
scripts/: smoke-e2e.sh
user-service/: pom.xml
user-service/src/main/java/com/opencore/user/: UserServiceApplication.java
user-service/src/main/resources/: application.yml
user-service/src/main/resources/db/migration/: V1__init.sql
(+47 files in other folders)
